fixed overflow problem for street select on map form

--- a/css/create_indication_form_styles.css
+++ b/css/create_indication_form_styles.css
@@ -186,6 +186,10 @@
 	max-height: 1000px;
 }
 
+#rvk-ticketing-create-ticket-form .collapse.show-map {
+	overflow-y: visible;
+}
+
 #rvk-ticketing-create-ticket-form #LocateButton {
     top: 93px;
     left: 21px;
